# AviaCompany

./: CMakeLists.txt  README.md  main.cpp
Implementation/: Client.cpp  Client.h  Person.cpp  Person.h  Plaine.cpp  Plaine.h  Repository.h  Ticket.cpp  Ticket.h
InputFile/: ClientInput.txt  RaiceInput.txt
OutputFile/: ClientOutput.txt
